@@ -1,5 +1,14 @@
 2014-03-13  Ram RS  <ramrs@nyu.edu>
 
+	* added: khmer/file_api.py - script to check disk space, check input file
+	status and check space before hashtable writing
+	* modified: scripts/*.py - all scripts now use file_api for above-mentioned
+	functionality.
+	* modified: scripts/*.py - pylint violations addressed in all scripts under
+	scripts/
+
+2014-03-13  Ram RS  <ramrs@nyu.edu>
+
 	* Bug fix: tests.test_normalize_by_median_no_bigcount() now runs
 	within temp directory
 
@@ -7,6 +16,7 @@
 
     * lib/read_parsers.hh: fix for Coverity CID 1054789: Uninitialized scalar
     field
+
 
 2014-03-03  Michael R. Crusoe  <mcrusoe@msu.edu>
 
